--- a/lil.html
+++ b/lil.html
@@ -242,6 +242,8 @@
   text-align: center;
   background-color: skyblue;
   border-radius: 20px;
+  margin-right: 35%;
+  margin-left: 35%;
 }
 </style>
 </head>
@@ -339,6 +341,7 @@
         password:demo
         <br />
         </h2>
+        برای وارد شدن به وبسایت و جستجوی کتاب های انگلیسی به تول بار استیک شده بر روی هدر وبسایت رفته و از یووزر نیم و پسوورد بالا استفاده کنید.
   </footer>
 </div>
 </body>
